Disable custom cursor (buggy on mobile devices)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -248,9 +248,9 @@ a.logo:hover {
 }
 
 /* =Custom Cursor */ /**********************************/
-* {
+/* * {
   cursor: none;
-}
+} */
 
 .cursor {
   width: 35px;
